@@ -8,10 +8,123 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
-  <modules>
-    <module>java-basics</module>
-    <module>java-11</module>
-    <module>java-17</module>
-    <module>java-21</module>
-  </modules>
+  <properties>
+    <java.version>23</java.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+    <joda-time.version>2.13.1</joda-time.version>
+    <lombok.version>1.18.36</lombok.version>
+    <junit.version>4.13.2</junit.version>
+    <junit-jupiter.version>[5.12,5.13)</junit-jupiter.version>
+    <assertj.version>[3.27,3.28)</assertj.version>
+    <slf4j.version>2.0.16</slf4j.version>
+
+    <maven.compiler.source>${java.version}</maven.compiler.source>
+    <maven.compiler.target>${java.version}</maven.compiler.target>
+
+    <maven.compiler.plugin.version>3.14.0</maven.compiler.plugin.version>
+    <maven.surefire.plugin.version>3.5.2</maven.surefire.plugin.version>
+    <maven.failsafe.plugin.version>3.5.2</maven.failsafe.plugin.version>
+  </properties>
+
+  <dependencies>
+    <!-- Testing -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>${junit-jupiter.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>${junit-jupiter.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>${assertj.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <!-- Utilities -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>${lombok.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <version>${joda-time.version}</version>
+    </dependency>
+
+    <!-- Logging -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>${slf4j.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>${slf4j.version}</version>
+    </dependency>
+  </dependencies>
+
+    <build>
+      <plugins>
+        <!--          <plugin>-->
+        <!--            <artifactId>maven-clean-plugin</artifactId>-->
+        <!--            <version>3.0.0</version>-->
+        <!--          </plugin>-->
+        <!--          &lt;!&ndash; see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging &ndash;&gt;-->
+        <!--          <plugin>-->
+        <!--            <artifactId>maven-resources-plugin</artifactId>-->
+        <!--            <version>3.0.2</version>-->
+        <!--          </plugin>-->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>${maven.compiler.plugin.version}</version>
+          <configuration>
+            <release>${java.version}</release>
+            <source>${java.version}</source>
+            <target>${java.version}</target>
+            <compilerArgs>
+              <arg>--enable-preview</arg>
+            </compilerArgs>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>${maven.surefire.plugin.version}</version>
+        </plugin>
+        <!--          <plugin>-->
+        <!--            <groupId>org.apache.maven.plugins</groupId>-->
+        <!--            <artifactId>maven-failsafe-plugin</artifactId>-->
+        <!--            <version>${maven.failsafe.plugin.version}</version>-->
+        <!--          </plugin>-->
+        <!--          <plugin>-->
+        <!--            <artifactId>maven-jar-plugin</artifactId>-->
+        <!--            <version>3.0.2</version>-->
+        <!--          </plugin>-->
+        <!--          <plugin>-->
+        <!--            <artifactId>maven-install-plugin</artifactId>-->
+        <!--            <version>2.5.2</version>-->
+        <!--          </plugin>-->
+        <!--          <plugin>-->
+        <!--            <artifactId>maven-deploy-plugin</artifactId>-->
+        <!--            <version>2.8.2</version>-->
+        <!--          </plugin>-->
+      </plugins>
+    </build>
 </project>
